@@ -1,3 +1,8 @@
+2004/03/16 22:08 (-0500) rwmcfa1
+
+	* examples/item_factory.pl: so the usage of accel_groups (based on
+	simple_menu code) and comment things a bit.
+
 2004/03/16 21:56 (-0500) muppetman
 
 	D maps-2.3
